--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@fazal/ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
   "files": [
     "build"
   ],
-  "private": true,
   "devDependencies": {
     "@ckeditor/ckeditor5-autoformat": "^25.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^25.0.0",
@@ -206,7 +205,6 @@
     "from2": "^2.3.0",
     "for-in": "^1.0.2",
     "fs-write-stream-atomic": "^1.0.10",
-    "fsevents": "^2.3.2",
     "fs.realpath": "^1.0.0",
     "fs-minipass": "^2.1.0",
     "get-intrinsic": "^1.1.1",
@@ -534,6 +532,9 @@
     "yocto-queue": "^0.1.0",
     "watchpack-chokidar2": "^2.0.1",
     "to-arraybuffer": "^1.0.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   },
   "engines": {
     "node": ">=12.0.0",
