Added math expression support

--- a/package.json
+++ b/package.json
@@ -2,56 +2,19 @@
   "name": "@fazal/ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
   "files": [
     "build"
   ],
   "devDependencies": {
-    "@ckeditor/ckeditor5-autoformat": "^25.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^25.0.0",
-    "@ckeditor/ckeditor5-block-quote": "^25.0.0",
-    "@ckeditor/ckeditor5-code-block": "^25.0.0",
-    "@ckeditor/ckeditor5-dev-utils": "^24.0.2",
-    "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.2",
-    "@ckeditor/ckeditor5-editor-classic": "^25.0.0",
-    "@ckeditor/ckeditor5-essentials": "^25.0.0",
-    "@ckeditor/ckeditor5-heading": "^25.0.0",
-    "@ckeditor/ckeditor5-highlight": "^25.0.0",
-    "@ckeditor/ckeditor5-html-embed": "^25.0.0",
-    "@ckeditor/ckeditor5-image": "^25.0.0",
-    "@ckeditor/ckeditor5-indent": "^25.0.0",
-    "@ckeditor/ckeditor5-link": "^25.0.0",
-    "@ckeditor/ckeditor5-list": "^25.0.0",
-    "@ckeditor/ckeditor5-media-embed": "^25.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^25.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^25.0.0",
-    "@ckeditor/ckeditor5-table": "^25.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^25.0.0",
-    "@ckeditor/ckeditor5-typing": "^25.0.0",
-    "@ckeditor/ckeditor5-upload": "^25.0.0",
-    "css-loader": "^5.0.1",
-    "postcss": "^8.2.4",
-    "postcss-loader": "^4.2.0",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.4.0"
-  },
-  "scripts": {
-    "build": "webpack --mode production",
-    "preversion": "npm run build"
-  },
-  "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^25.0.0",
-    "acorn": "^6.4.2",
     "acorn-walk": "^6.2.0",
+    "acorn": "^6.4.2",
     "aggregate-error": "^3.1.0",
-    "ajv": "^6.12.6",
     "ajv-errors": "^1.0.1",
     "ajv-keywords": "^3.5.2",
+    "ajv": "^6.12.6",
     "alphanum-sort": "^1.0.2",
     "ansi-colors": "^4.1.1",
     "ansi-styles": "^4.3.0",
@@ -89,9 +52,9 @@
     "browserify-sign": "^4.2.1",
     "browserify-zlib": "^0.2.0",
     "browserslist": "^4.16.3",
-    "buffer": "^4.9.2",
     "buffer-from": "^1.1.1",
     "buffer-xor": "^1.0.3",
+    "buffer": "^4.9.2",
     "builtin-status-codes": "^3.0.0",
     "cacache": "^15.0.5",
     "cache-base": "^1.0.1",
@@ -100,8 +63,8 @@
     "caller-callsite": "^2.0.0",
     "caller-path": "^2.0.0",
     "callsites": "^2.0.0",
-    "camelcase": "^6.2.0",
     "camelcase-css": "^2.0.1",
+    "camelcase": "^6.2.0",
     "caniuse-api": "^3.0.0",
     "caniuse-lite": "^1.0.30001187",
     "chalk": "^2.4.2",
@@ -114,10 +77,10 @@
     "clone-deep": "^4.0.1",
     "coa": "^2.0.2",
     "collection-visit": "^1.0.0",
-    "color": "^3.1.3",
     "color-convert": "^1.9.3",
     "color-name": "^1.1.4",
     "color-string": "^1.5.4",
+    "color": "^3.1.3",
     "colorette": "^1.2.1",
     "commander": "^2.20.3",
     "commondir": "^1.0.1",
@@ -137,17 +100,18 @@
     "crypto-browserify": "^3.12.0",
     "css-color-names": "^0.0.4",
     "css-declaration-sorter": "^4.0.1",
-    "css-select": "^2.1.0",
+    "css-loader": "^5.0.1",
     "css-select-base-adapter": "^0.1.1",
+    "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.37",
     "css-what": "^3.4.2",
     "cssesc": "^3.0.0",
-    "cssnano": "^4.1.10",
     "cssnano-preset-default": "^4.0.7",
     "cssnano-util-get-arguments": "^4.0.0",
     "cssnano-util-get-match": "^4.0.0",
     "cssnano-util-raw-cache": "^4.0.1",
     "cssnano-util-same-parent": "^4.0.1",
+    "cssnano": "^4.1.10",
     "csso": "^4.2.0",
     "cyclist": "^1.0.1",
     "debug": "^2.6.9",
@@ -214,16 +178,16 @@
     "get-intrinsic": "^1.1.1",
     "get-stream": "^6.0.0",
     "get-value": "^2.0.6",
-    "glob": "^7.1.6",
     "glob-parent": "^3.1.0",
     "glob-to-regexp": "^0.3.0",
+    "glob": "^7.1.6",
     "globby": "^10.0.2",
     "graceful-fs": "^4.2.6",
-    "has": "^1.0.3",
     "has-flag": "^3.0.0",
     "has-symbols": "^1.0.1",
     "has-value": "^1.0.0",
     "has-values": "^1.0.0",
+    "has": "^1.0.3",
     "hash-base": "^3.1.0",
     "hash.js": "^1.1.7",
     "hex-color-regex": "^1.1.0",
@@ -314,10 +278,10 @@
     "minimalistic-crypto-utils": "^1.0.1",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
-    "minipass": "^3.1.3",
     "minipass-collect": "^1.0.2",
     "minipass-flush": "^1.0.5",
     "minipass-pipeline": "^1.2.4",
+    "minipass": "^3.1.3",
     "minizlib": "^2.1.2",
     "mississippi": "^3.0.0",
     "mixin-deep": "^1.3.2",
@@ -380,6 +344,7 @@
     "postcss-import": "^12.0.1",
     "postcss-js": "^2.0.3",
     "postcss-load-config": "^2.1.2",
+    "postcss-loader": "^4.2.0",
     "postcss-merge-longhand": "^4.0.11",
     "postcss-merge-rules": "^4.0.3",
     "postcss-minify-font-values": "^4.0.2",
@@ -409,9 +374,10 @@
     "postcss-svgo": "^4.0.2",
     "postcss-unique-selectors": "^4.0.1",
     "postcss-value-parser": "^3.3.1",
+    "postcss": "^8.2.4",
     "prelude-ls": "^1.1.2",
-    "process": "^0.11.10",
     "process-nextick-args": "^2.0.1",
+    "process": "^0.11.10",
     "promise-inflight": "^1.0.1",
     "prr": "^1.0.1",
     "public-encrypt": "^4.0.3",
@@ -419,11 +385,12 @@
     "pumpify": "^1.5.1",
     "punycode": "^1.4.1",
     "q": "^1.5.1",
-    "querystring": "^0.2.0",
     "querystring-es3": "^0.2.1",
+    "querystring": "^0.2.0",
     "queue-microtask": "^1.2.2",
     "randombytes": "^2.1.0",
     "randomfill": "^1.0.4",
+    "raw-loader": "^4.0.2",
     "read-cache": "^1.0.0",
     "readable-stream": "^2.3.7",
     "readdirp": "^3.5.0",
@@ -432,10 +399,10 @@
     "remove-trailing-separator": "^1.1.0",
     "repeat-element": "^1.1.3",
     "repeat-string": "^1.6.1",
-    "resolve": "^1.20.0",
     "resolve-cwd": "^3.0.0",
     "resolve-from": "^3.0.0",
     "resolve-url": "^0.2.1",
+    "resolve": "^1.20.0",
     "ret": "^0.1.15",
     "reusify": "^1.0.4",
     "rgb-regex": "^1.0.1",
@@ -461,14 +428,14 @@
     "signal-exit": "^3.0.3",
     "simple-swizzle": "^0.2.2",
     "slash": "^3.0.0",
-    "snapdragon": "^0.8.2",
     "snapdragon-node": "^2.1.1",
     "snapdragon-util": "^3.0.1",
+    "snapdragon": "^0.8.2",
     "source-list-map": "^2.0.1",
-    "source-map": "^0.6.1",
     "source-map-resolve": "^0.5.3",
     "source-map-support": "^0.5.19",
     "source-map-url": "^0.4.1",
+    "source-map": "^0.6.1",
     "split-string": "^3.1.0",
     "sprintf-js": "^1.0.3",
     "ssri": "^8.0.1",
@@ -478,24 +445,26 @@
     "stream-each": "^1.2.3",
     "stream-http": "^2.8.3",
     "stream-shift": "^1.0.1",
+    "string_decoder": "^1.3.0",
     "string.prototype.trimend": "^1.0.3",
     "string.prototype.trimstart": "^1.0.3",
-    "string_decoder": "^1.3.0",
     "strip-final-newline": "^2.0.0",
+    "style-loader": "^2.0.0",
     "stylehacks": "^4.0.3",
     "sugarss": "^2.0.0",
     "supports-color": "^7.2.0",
     "svgo": "^1.3.2",
     "tapable": "^1.1.3",
     "tar": "^6.1.0",
+    "terser-webpack-plugin": "^4.2.3",
     "terser": "^4.8.0",
     "through2": "^3.0.2",
     "timers-browserify": "^2.0.12",
     "timsort": "^0.3.0",
     "to-arraybuffer": "^1.0.1",
     "to-object-path": "^0.3.0",
-    "to-regex": "^3.0.2",
     "to-regex-range": "^2.1.1",
+    "to-regex": "^3.0.2",
     "tslib": "^1.14.1",
     "tty-browserify": "^0.0.0",
     "type-check": "^0.3.2",
@@ -513,16 +482,18 @@
     "urix": "^0.1.0",
     "url": "^0.11.0",
     "use": "^3.1.1",
-    "util": "^0.11.1",
     "util-deprecate": "^1.0.2",
     "util.promisify": "^1.0.1",
+    "util": "^0.11.1",
     "v8-compile-cache": "^2.2.0",
     "vendors": "^1.0.4",
     "vm-browserify": "^1.1.2",
-    "watchpack": "^1.7.5",
     "watchpack-chokidar2": "^2.0.1",
+    "watchpack": "^1.7.5",
+    "webpack-cli": "^4.4.0",
     "webpack-merge": "^5.7.3",
     "webpack-sources": "^1.4.3",
+    "webpack": "^4.46.0",
     "which": "^2.0.2",
     "wildcard": "^2.0.0",
     "word-wrap": "^1.2.3",
@@ -533,6 +504,36 @@
     "yallist": "^4.0.0",
     "yaml": "^1.10.0",
     "yocto-queue": "^0.1.0"
+  },
+  "scripts": {
+    "build": "webpack --mode production",
+    "preversion": "npm run build"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^25.0.0",
+    "@ckeditor/ckeditor5-autoformat": "^25.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^25.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^25.0.0",
+    "@ckeditor/ckeditor5-code-block": "^25.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^24.0.2",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.2",
+    "@ckeditor/ckeditor5-editor-classic": "^25.0.0",
+    "@ckeditor/ckeditor5-essentials": "^25.0.0",
+    "@ckeditor/ckeditor5-heading": "^25.0.0",
+    "@ckeditor/ckeditor5-highlight": "^25.0.0",
+    "@ckeditor/ckeditor5-html-embed": "^25.0.0",
+    "@ckeditor/ckeditor5-image": "^25.0.0",
+    "@ckeditor/ckeditor5-indent": "^25.0.0",
+    "@ckeditor/ckeditor5-link": "^25.0.0",
+    "@ckeditor/ckeditor5-list": "^25.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^25.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^25.0.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^25.0.0",
+    "@ckeditor/ckeditor5-table": "^25.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^25.0.0",
+    "@ckeditor/ckeditor5-typing": "^25.0.0",
+    "@ckeditor/ckeditor5-upload": "^25.0.0",
+    "@wiris/mathtype-ckeditor5": "^7.27.0"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
