--- a/package.json
+++ b/package.json
@@ -2,13 +2,37 @@
   "name": "@fazal/ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
   "files": [
     "build"
   ],
   "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^25.0.0",
+    "@ckeditor/ckeditor5-autoformat": "^25.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^25.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^25.0.0",
+    "@ckeditor/ckeditor5-code-block": "^25.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^24.0.2",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.2",
+    "@ckeditor/ckeditor5-editor-classic": "^25.0.0",
+    "@ckeditor/ckeditor5-essentials": "^25.0.0",
+    "@ckeditor/ckeditor5-heading": "^25.0.0",
+    "@ckeditor/ckeditor5-highlight": "^25.0.0",
+    "@ckeditor/ckeditor5-html-embed": "^25.0.0",
+    "@ckeditor/ckeditor5-image": "^25.0.0",
+    "@ckeditor/ckeditor5-indent": "^25.0.0",
+    "@ckeditor/ckeditor5-link": "^25.0.0",
+    "@ckeditor/ckeditor5-list": "^25.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^25.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^25.0.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^25.0.0",
+    "@ckeditor/ckeditor5-table": "^25.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^25.0.0",
+    "@ckeditor/ckeditor5-typing": "^25.0.0",
+    "@ckeditor/ckeditor5-upload": "^25.0.0",
+    "@wiris/mathtype-ckeditor5": "^7.27.0",
     "acorn-walk": "^6.2.0",
     "acorn": "^6.4.2",
     "aggregate-error": "^3.1.0",
@@ -509,32 +533,7 @@
     "build": "webpack --mode production",
     "preversion": "npm run build"
   },
-  "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^25.0.0",
-    "@ckeditor/ckeditor5-autoformat": "^25.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^25.0.0",
-    "@ckeditor/ckeditor5-block-quote": "^25.0.0",
-    "@ckeditor/ckeditor5-code-block": "^25.0.0",
-    "@ckeditor/ckeditor5-dev-utils": "^24.0.2",
-    "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.2",
-    "@ckeditor/ckeditor5-editor-classic": "^25.0.0",
-    "@ckeditor/ckeditor5-essentials": "^25.0.0",
-    "@ckeditor/ckeditor5-heading": "^25.0.0",
-    "@ckeditor/ckeditor5-highlight": "^25.0.0",
-    "@ckeditor/ckeditor5-html-embed": "^25.0.0",
-    "@ckeditor/ckeditor5-image": "^25.0.0",
-    "@ckeditor/ckeditor5-indent": "^25.0.0",
-    "@ckeditor/ckeditor5-link": "^25.0.0",
-    "@ckeditor/ckeditor5-list": "^25.0.0",
-    "@ckeditor/ckeditor5-media-embed": "^25.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^25.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^25.0.0",
-    "@ckeditor/ckeditor5-table": "^25.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^25.0.0",
-    "@ckeditor/ckeditor5-typing": "^25.0.0",
-    "@ckeditor/ckeditor5-upload": "^25.0.0",
-    "@wiris/mathtype-ckeditor5": "^7.27.0"
-  },
+  "dependencies": {},
   "optionalDependencies": {
     "fsevents": "^2.3.2"
   },
